--- a/wp-content/themes/val-theme/style.css
+++ b/wp-content/themes/val-theme/style.css
@@ -36,15 +36,57 @@ General comments (optional).
 body{
 	background-image: url(img/plaid.png);
 	font-family: 'caviar_dreamsregular', sans-serif;
+    max-width: 70em;
+    margin: 0 auto;
 }
+
+
 
 .head-font, h1, h2{
 	font-family: 'londrina_solidregular', sans-serif;
 	font-size: 35px;
-	text-align: center;
 }
 
 a{
 	text-decoration: none;
 	color: #000;
+}
+
+.nav{
+    border-left: 30px solid black;
+    margin-left: 70px;
+    padding-top:2px;
+
+}
+
+.menu-item{
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
+    background-color: #fff;
+    margin: 60px 60px 60px -72px;
+    line-height: 120px;
+    text-align: center;
+    font-family: 'londrina_solidregular', sans-serif;
+    font-size: 23px;
+}
+
+header{
+    float:right;
+    width:70%;
+
+}
+main{
+    float: right;
+    width:70%;
+}
+
+nav{
+    float:left;
+    width:30%;
+
+}
+footer{
+    float:left;
+    width: 70%;
 }
