--- a/wp-content/themes/val-theme/style.css
+++ b/wp-content/themes/val-theme/style.css
@@ -42,9 +42,28 @@ body{
 
 
 
-.head-font, h1, h2{
+.head-font, h1{
 	font-family: 'londrina_solidregular', sans-serif;
-	font-size: 35px;
+	font-size: 50px;
+    margin-top: 17px;
+}
+
+h2{
+    margin-bottom: 5px;
+    margin-top: 2px;
+    font-size: 35px;
+}
+
+h3{
+    font-size: 24px;
+}
+
+h4{
+    font-size: 17px;
+}
+
+h5{
+    font-size: 10px;
 }
 
 a{
@@ -53,8 +72,8 @@ a{
 }
 
 .nav{
-    border-left: 30px solid black;
-    margin-left: 70px;
+    border-left: 30px solid #A3A3A3;
+    margin-left: 50px;
     padding-top:2px;
 
 }
@@ -64,29 +83,47 @@ a{
     height: 120px;
     border-radius: 60px;
     background-color: #fff;
-    margin: 60px 60px 60px -72px;
+    margin: 30px 60px 30px -72px;
     line-height: 120px;
     text-align: center;
     font-family: 'londrina_solidregular', sans-serif;
     font-size: 23px;
 }
+.current-menu-item{
+    background-color: #4D4D4D;
+}
+
+.current-menu-item a{
+    color: #fff;
+}
+
+a{
+    padding: 34px 26px 34px 26px;
+}
 
 header{
     float:right;
-    width:70%;
+    width: 80%;
 
 }
+
+.post{
+    float: left;
+    width: 25%;
+
+}
+
 main{
     float: right;
-    width:70%;
+    width: 80%;
 }
 
 nav{
     float:left;
-    width:30%;
+    width: 20%;
 
 }
+
 footer{
-    float:left;
-    width: 70%;
+    clear: both;
 }
